--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
+    // // google service 
+    // id 'com.google.gms.google-services'
 }
 
 def localProperties = new Properties()
@@ -47,7 +49,7 @@ android {
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
+            // Signing with the debug keys for now, so flutter run --release works.
             signingConfig = signingConfigs.debug
         }
     }
@@ -56,3 +58,18 @@ android {
 flutter {
     source = "../.."
 }
+
+
+// dependencies {
+//   // Import the Firebase BoM
+//   implementation platform('com.google.firebase:firebase-bom:33.1.2')
+
+
+//   // TODO: Add the dependencies for Firebase products you want to use
+//   // When using the BoM, don't specify versions in Firebase dependencies
+//   implementation 'com.google.firebase:firebase-analytics'
+
+
+//   // Add the dependencies for any other desired Firebase products
+//   // https://firebase.google.com/docs/android/setup#available-libraries
+// }
