--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: 1.2.2
   
 
   # The following adds the Cupertino Icons font to your application.
@@ -27,6 +28,8 @@ dependencies:
   firebase_messaging: ^14.7.10
   firebase_auth: ^4.16.0
   google_sign_in: ^6.2.1
+  image_picker: ^0.8.4+6
+  google_maps_flutter: ^2.1.1
   
 
 dev_dependencies:
@@ -39,7 +42,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 
 # The following section is specific to Flutter packages.
